--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,5 +1,21 @@
-@import '_fonts';
-@import '_settings';
+@use '_fonts';
+@use '_settings';
+@use '_variables';
+
+
+$text: #1E2B3E;
+$border: #BDCCE2;
+$border2: #D7E2F2;
+$primary: #00b066;
+$primaryDark: #007d48;
+$secondary: #92A3BC;
+$body: #F3F8FF;
+$bglight: #fff;
+$bgdark: #1E2B3E;
+$header: #2D4159;
+$default: #384B61;
+$bglight: #E3EBF9;
+$radius8: 8px;
 
 body {
   display: flex;
