--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -3,16 +3,20 @@
     --primary: #3AAA35;
     --border: #B2B2B2;
     --radius: 5px;
+    --dark: #000;
+    --light: #fff;
+    --bg: #F7F7F8;
+    --bgDark: #EEEEEE;
+    --shadow: 0px 4px 8px rgba(0, 0, 0, 0.14);
 
-    
-    --border2: #D7E2F2;
-    --primaryDark: #007d48;
-    --secondary: #92A3BC;
-    --body: #F3F8FF;
-    --bglight: #fff;
-    --bgdark: #1E2B3E;
-    --header: #2D4159;
-    --default: #384B61;
-    --bglight: #E3EBF9;
+    // --border2: #D7E2F2;
+    // --primaryDark: #007d48;
+    // --secondary: #92A3BC;
+    // --body: #F3F8FF;
+    // --bglight: #fff;
+    // --bgdark: #1E2B3E;
+    // --header: #2D4159;
+    // --default: #384B61;
+    // --bglight: #E3EBF9;
     
 }
