--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -1,13 +1,13 @@
 :root {
     --text: #2B2B2B;
-    --primary: #3AAA35;
+    --primary: 60, 171, 54;
     --border: #B2B2B2;
     --radius: 5px;
     --dark: #000;
     --light: #fff;
     --bg: #F7F7F8;
     --bgDark: #EEEEEE;
-    --shadow: 0px 4px 8px rgba(0, 0, 0, 0.14);
+    --shadow: '0px 4px 8px rgba(0, 0, 0, 0.14)';
 
     // --border2: #D7E2F2;
     // --primaryDark: #007d48;
