--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -9,6 +9,8 @@
     --bgDark: #EEEEEE;
     --shadow: '0px 4px 8px rgba(0, 0, 0, 0.14)';
 
+    --test:#3AAA35;
+
     // --border2: #D7E2F2;
     // --primaryDark: #007d48;
     // --secondary: #92A3BC;
