add checkob + radio style

--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -3,8 +3,8 @@
     --primary: 60, 171, 54;
     --border: #B2B2B2;
     --radius: 5px;
-    --dark: #000;
-    --light: #fff;
+    --dark: 0, 0, 0;
+    --light: 255, 255, 255;
     --bg: #F7F7F8;
     --bgDark: #EEEEEE;
     --shadow: '0px 4px 8px rgba(0, 0, 0, 0.14)';
