--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -1,13 +1,15 @@
 :root {
     --text: #2B2B2B;
     --primary: 60, 171, 54;
+    --red: 234, 50, 50;
     --border: #B2B2B2;
     --radius: 5px;
+    --raduisBig: 10px;
     --dark: 0, 0, 0;
     --light: 255, 255, 255;
     --bg: #F7F7F8;
     --bgDark: #EEEEEE;
-    --shadow: '0px 4px 8px rgba(0, 0, 0, 0.14)';
+    --shadow: 0px 4px 8px rgba(0, 0, 0, 0.14);
 
     --test:#3AAA35;
 
