--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -61,6 +61,9 @@ body {
   &:active {
     background-color: tomato;
   }
+  &:focus {
+    box-shadow: 0 0 0 4px rgba(var(--primary), 0.4);
+  }
   &:hover {
     @media (min-width: 1023px) {
       background: #fff;
