add block TheIntro

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -166,6 +166,9 @@ body {
     transform: translate(-50%, -50%);
   }
 }
+.relative {
+  position: relative;
+}
 .title {
   font-size: 44px;
   line-height: 100%;
