немного переделал button

--- a/assets/style/_settings.scss
+++ b/assets/style/_settings.scss
@@ -30,6 +30,9 @@ a {
   text-decoration: none;
   display: inline-block;
 }
+a.btn {
+  display: inline-block;
+}
 img {
   max-width: 100%;
   vertical-align: bottom;
