add block TheMentor

--- a/assets/style/_settings.scss
+++ b/assets/style/_settings.scss
@@ -29,9 +29,7 @@ ul {
 a {
   text-decoration: none;
   display: inline-block;
-}
-a.btn {
-  display: inline-block;
+  color: inherit;
 }
 img {
   max-width: 100%;
