--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -1,25 +1,24 @@
 :root {
-    --text: #2B2B2B;
-    --primary: 60, 171, 54;
-    --red: 234, 50, 50;
-    --border: #B2B2B2;
-    --radius: 5px;
-    --raduisBig: 10px;
-    --dark: 0, 0, 0;
-    --light: 255, 255, 255;
-    --bg: #F7F7F8;
-    --bgDark: #EEEEEE;
-    --shadow: 0px 4px 8px rgba(0, 0, 0, 0.14);
-    --test:#3AAA35;
+  --text: #2b2b2b;
+  --primary: 60, 171, 54;
+  --red: 234, 50, 50;
+  --border: #b2b2b2;
+  --radius: 5px;
+  --raduisBig: 10px;
+  --dark: 0, 0, 0;
+  --light: 255, 255, 255;
+  --bg: #f7f7f8;
+  --bgDark: #eeeeee;
+  --shadow: 0px 4px 8px rgba(0, 0, 0, 0.14);
+  --test: #3aaa35;
 
-    // --border2: #D7E2F2;
-    // --primaryDark: #007d48;
-    // --secondary: #92A3BC;
-    // --body: #F3F8FF;
-    // --bglight: #fff;
-    // --bgdark: #1E2B3E;
-    // --header: #2D4159;
-    // --default: #384B61;
-    // --bglight: #E3EBF9;
-    
+  // --border2: #D7E2F2;
+  // --primaryDark: #007d48;
+  // --secondary: #92A3BC;
+  // --body: #F3F8FF;
+  // --bglight: #fff;
+  // --bgdark: #1E2B3E;
+  // --header: #2D4159;
+  // --default: #384B61;
+  // --bglight: #E3EBF9;
 }
