--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -419,6 +419,11 @@ table {
       font-size: 18px;
       margin-bottom: 2px;
     }
+
+    &--full {
+      white-space: normal;
+      height: auto;
+    }
   }
 
   &__tags {
