add basket + order

--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -2,6 +2,7 @@
   --text: #2b2b2b;
   --primary: 60, 171, 54;
   --red: 234, 50, 50;
+  --bg2: 178, 178, 178;
   --border: #b2b2b2;
   --radius: 5px;
   --raduisBig: 10px;
